# pound

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  COMPILING.md  CONTRIBUTING.md  GPU_ENGINE_DESIGN_DOC.md  README.md
.github/: pull_request_template.md
.github/workflows/: build.yml
core/: main.cpp  romloader.cpp
core/ARM/: cpu.cpp  cpu.h
core/Base/Logging/: Filter.cpp  LogTypes.h
core/JIT/: jit.cpp  jit.h
core/aarch64/: isa.cpp  isa.h  memory.h
core/arm64/: CMakeLists.txt  guest.cpp  guest.h  isa.cpp  isa.h  memory.cpp  mmu.cpp  mmu.h
core/common/: Arch.h  Assert.cpp  Assert.h  Config.cpp  Error.h  StringUtil.cpp  Types.h
core/common/Logging/: Filter.cpp  Log.h  LogTypes.h
core/frontend/: color.cpp  gui.h  panels.cpp
core/gpu/vk/: emugpuvk.cpp
core/host/memory/: arena_allocator.h
core/memory/: arena.cpp  arena.h  arena_allocator.h
design_docs/: DESIGN_DOC_3RD_PARTY_LIBRARIES.md  DESIGN_DOC_GITHUB_VULNERABILITY_SCANNING.md  DESIGN_DOC_LICENSE_COMPLIENCE.md  DESIGN_DOC_LOGGING_FRAMEWORK.md
docs/: PROGRAMMING_RULES.md  SM86_TO_SPIRV_RULES.md
gui/: CMakeLists.txt  GUIManager.cpp  color.h  gui.cpp  gui.h  panels.cpp  panels.h
resources/docs/: compguide.md
scripts/: generate_decoder_tests.py  generate_jit_assets.py  generate_jit_decoder_a32_table.py  generate_jit_decoder_tests.py  log.sh  setup_submodules.sh  update_submodule.sh
src/: README.md  attributes.h  main.c  main.cpp
src/common/: BoundedQueue.h  CMakeLists.txt  Config.cpp  Config.h  DESIGN_DOC_ASSERT_FRAMEWORK.md  Enum.h  IoFile.cpp  IoFile.h  PathUtil.cpp  PathUtil.h  PolyfillThread.h  StringUtil.cpp  StringUtil.h  Thread.cpp  Thread.h  logging.c  logging.cpp  logging.h  passert.c  passert.cpp  passert.h  pmath.h  swap.h
src/common/Logging/: Backend.cpp  Backend.h  Filter.cpp  LogTypes.h  TextFormatter.cpp
src/frontend/: CMakeLists.txt  color.h  gui.cpp  panels.cpp  panels.h
src/gpu/: engine.c  engine.h
src/gpu/recompiler/: ir.h
src/gpu/sm86/: cta.c  cta.h  decoder.c  decoder.h  mmu.h  spirv_ir.h  warp.c  warp.h
src/host/: CMakeLists.txt
src/host/memory/: arena.c  arena.cpp  arena.h  arena_stl.h
src/jit/: CMakeLists.txt  a32_types.h
src/jit/decoder/: arm32.c  arm32.cpp  arm32.h  arm32.inc  arm32_table_generated.c  arm32_table_generated.h
src/jit/frontend/decoder/: arm32.c  arm32.h  arm32.inc  arm32_opcodes.h  arm32_table.c  arm32_table.h  arm32_table_generated.c  arm32_table_generated.h
src/jit/interpreter/a32/: instruction.c  translator.c
src/jit/interpreter/arm32/: handler_table.inc  handlers.inc  handlers.inc.skeleton  instruction.c  instruction.h  translator.c  translator.h
src/jit/ir/: basic_block.c  basic_block.cpp  instruction.c  instruction.cpp  instruction.h  opcode.c  opcode.cpp  opcode.h  opcode.inc  type.c  type.cpp  type.h  value.c  value.cpp  value.h
src/kvm/: CMakeLists.txt  DESIGN_DOC_MMIO.md  endian.h  guest.cpp  guest.h  kvm.cpp  kvm.h  mmio.cpp  mmio.h  mmu.cpp  mmu.h
src/pvm/: CMakeLists.txt  endian.h  guest.cpp  guest.h  mmio.cpp  mmio.h  mmu.cpp  mmu.h  pvm.cpp  pvm.h
src/targets/switch1/hardware/: CMakeLists.txt  probe.cpp
tests/: test_engine.cpp
tests/jit/decoder/: test_arm32.cpp  test_arm32_generated.cpp
tests/jit/ir/: test_value.cpp
tools/sm86/: generate_sm86.py
